--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.1">
+<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.4">
 
 
 <div class="hidden" id="who-when-where">
@@ -86,7 +86,7 @@
 		<legend>Nursing assessment</legend>
 		<h3>Nursing assessment</h3>
 		<p>
-			<obs conceptId="LFHC:1085" />
+			<obs conceptId="LFHC:1085" rows="4" cols="50"/>
 		</p>
 	</fieldset>
 </section>
