--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.1">
+<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.4">
 
 <script type="text/javascript">
 	if(jQuery){
@@ -80,7 +80,7 @@
 
 <section id="lines-tubes" sectionTag="section" headerStyle="title" headerCode="Lines and Tubes">
 	<fieldset field-separator=", ">
-		<obsgroup groupingConceptId="CIEL:1078">
+		<obsgroup groupingConceptId="LFHC:1078">
 			<legend>IVC #1</legend>
 			<h3>IVC #1</h3>
 			<p>
@@ -95,7 +95,7 @@
 		</obsgroup>
 	</fieldset>
 	<fieldset field-separator=", ">
-		<obsgroup groupingConceptId="CIEL:1079">
+		<obsgroup groupingConceptId="LFHC:1079">
 			<legend>IVC #2</legend>
 			<h3>IVC #2</h3>
 			<p>
@@ -111,7 +111,7 @@
 		</obsgroup>
 	</fieldset>
 	<fieldset field-separator=", ">
-		<obsgroup groupingConceptId="CIEL:1080">
+		<obsgroup groupingConceptId="LFHC:1080">
 			<legend>IVC #3</legend>
 			<h3>IVC #3</h3>
 			<p>
@@ -126,7 +126,7 @@
 		</obsgroup>
 	</fieldset>
 	<fieldset field-separator=", ">
-		<obsgroup groupingConceptId="CIEL:1081">
+		<obsgroup groupingConceptId="LFHC:1081">
 			<legend>NG tube</legend>
 			<h3>NG tube</h3>
 			<p>
@@ -138,7 +138,7 @@
 		</obsgroup>
 	</fieldset>
 	<fieldset field-separator=", ">
-		<obsgroup groupingConceptId="CIEL:1082">
+		<obsgroup groupingConceptId="LFHC:1082">
 			<legend>Urinary catheter</legend>
 			<h3>Urinary catheter</h3>
 			<p>
@@ -150,7 +150,7 @@
 		</obsgroup>
 	</fieldset>
 	<fieldset field-separator=", ">
-		<obsgroup groupingConceptId="CIEL:1083">
+		<obsgroup groupingConceptId="LFHC:1083">
 			<legend>Other tube</legend>
 			<h3>Other tube</h3>
 			<p>
