--- a/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
+++ b/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="8a9a1b54-6bf6-4e56-94bc-178fe4545b66" formName="Vitals and PEWS" formEncounterType="67a71486-1a54-468f-ac3e-7091a9a79584" formVersion="0.3">
+<htmlform formUuid="8a9a1b54-6bf6-4e56-94bc-178fe4545b66" formName="Vitals and PEWS" formEncounterType="67a71486-1a54-468f-ac3e-7091a9a79584" formVersion="0.4">
 
 
 <div class="hidden" id="who-when-where">
@@ -987,7 +987,7 @@ function handleDisplayParentChild (obsHtmlId, parentHtmlId, obsValue, position) 
 		<!-- Receiving O2 -->
 		<fieldset field-separator=", ">
 			<legend>Receiving O2</legend>
-			<h3<lookup expression="fn.getConcept('LFHC:1026').name"/></h3>
+			<h3><lookup expression="fn.getConcept('LFHC:1026').name"/></h3>
 			<p>
 				<obs conceptId="LFHC:1026" id="receiving_o2" answerConceptIds="CIEL:1065, CIEL:1066, CIEL:1067"/>
 			</p>
@@ -1027,7 +1027,7 @@ function handleDisplayParentChild (obsHtmlId, parentHtmlId, obsValue, position) 
 				<obs conceptId="CIEL:162643"/>
 			</p>
 			
-			<h3><br/>Loss of counciousness<small> (for PEWS calculation)</small></h3>
+			<h3><br/>Loss of conciousness<small> (for PEWS calculation)</small></h3>
 
 			<p class="left">
 
