--- a/omod/src/main/webapp/resources/htmlforms/wound.html
+++ b/omod/src/main/webapp/resources/htmlforms/wound.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="75a97fa9-4b04-4968-8f5b-041e5d0a3dae" formVersion="0.1">
+<htmlform formUuid="52c43d9d-c3b6-4fda-8f6b-3590034e7c42" formName="Wound Details" formEncounterType="75a97fa9-4b04-4968-8f5b-041e5d0a3dae" formVersion="0.4">
 
 
 <div class="hidden" id="who-when-where">
@@ -28,7 +28,7 @@
 	</p>
 </div>
 
-<section id="clinical-notes" sectionTag="section" headerStyle="title" headerCode="Clinical Notes">
+<section id="wound-details" sectionTag="section" headerStyle="title" headerCode="Wound details">
 	<fieldset field-separator=", ">
 		<legend>
 			Type of wound
