--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Doctor Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.4">
+<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Doctor Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.4.1">
 
 <script type="text/javascript">
 	if(jQuery){
@@ -19,7 +19,7 @@
 
 		jQuery(document).ready(function(){
 
-			jQuery('i.addEntry').live("click", function(){
+			jQuery('i.addEntry').click(function(){
 				var correctedAddButtonId = parseFloat(this.id) + 1;
 
 				var contentAddId = "#" + correctedAddButtonId + "-toggleContainer";
@@ -29,7 +29,7 @@
 		});
 
 		jQuery(document).ready(function(){
-			jQuery('i.removeEntry').live("click", function(){
+			jQuery('i.removeEntry').click(function(){
 				var correctedRemoveButtonId = parseFloat(this.id) - 1;
 				var contentAddId = "#" + parseFloat(this.id) + "-toggleContainer";
 				jQuery(contentAddId).toggle(false);
@@ -119,7 +119,7 @@
 		<legend>Other referral</legend>
 		<h3>Other referral</h3>
 		<p>
-		<obs conceptId="LFHC:1089" rows="4" cols="40"/>
+			<obs conceptId="LFHC:1089" rows="4" cols="40"/>
 		</p>
 
 		<h3>Date of other referral</h3>
@@ -245,8 +245,8 @@
 								</tr>
 								<tr>
 									<td colspan="2" style="text-align:right;">
-										<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-										<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+										<i id="{n}-addEntry" class="addEntry icon-">&#xf055; Add</i>
+										<i id="{n}-removeEntry" class="removeEntry icon-">   &#xf056; Remove</i>
 									</td>
 								</tr>
 							</tbody>
