--- a/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
+++ b/omod/src/main/webapp/resources/htmlforms/vitals-pews.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="8a9a1b54-6bf6-4e56-94bc-178fe4545b66" formName="Vitals and PEWS" formEncounterType="67a71486-1a54-468f-ac3e-7091a9a79584" formVersion="0.4">
+<htmlform formUuid="8a9a1b54-6bf6-4e56-94bc-178fe4545b66" formName="Vitals and PEWS" formEncounterType="67a71486-1a54-468f-ac3e-7091a9a79584" formVersion="0.4.1">
 
 
 <div class="hidden" id="who-when-where">
@@ -1351,7 +1351,7 @@ function handleDisplayParentChild (obsHtmlId, parentHtmlId, obsValue, position) 
 						</tr>
 						<tr>
 							<td class="tg-031e">
-								Receiving pxygen
+								Receiving oxygen
 							</td>
 							<td class="tg-031e">
 								<span id="receiving-o2-value"></span>
