--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.4.1">
+<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.4.2">
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
@@ -280,7 +280,7 @@
 						<obsgroup groupingConceptId="LFHC:1052">
 							<p>
 
-								<obs id="11-parent" conceptId="CIEL:1119" answerConceptId="CIEL:1130"  answerLabel="Phsychiatric exam"  style="checkbox"/>
+								<obs id="11-parent" conceptId="CIEL:1119" answerConceptId="CIEL:1130"  answerLabel="Psychiatric exam"  style="checkbox"/>
 							</p>
 							<p>
 								<obs class="result" id="11-finding" conceptId="CIEL:1130">
