--- a/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="eb7b12ef-bea9-4aa8-8771-adbd9879d191" formName="Diagnostic Imaging" formEncounterType="301e0396-2069-4085-919e-5a7b423b54f8" formVersion="0.4.1">
+<htmlform formUuid="eb7b12ef-bea9-4aa8-8771-adbd9879d191" formName="Xray/Ultrasound Order" formEncounterType="301e0396-2069-4085-919e-5a7b423b54f8" formVersion="0.4.2">
 
 
 
