LFHCDESK-22: OPD nurse form, but just the first part of the issue concerning Diarrhea and Rash

--- a/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="44305e02-7e49-4f5a-8acf-49042acbe483" formName="OPD Nurse" formEncounterType="c7700650-63a6-4893-976e-7a7a0cc43b04" formVersion="0.4.1">
+<htmlform formUuid="44305e02-7e49-4f5a-8acf-49042acbe483" formName="OPD Nurse" formEncounterType="c7700650-63a6-4893-976e-7a7a0cc43b04" formVersion="0.4.2">
 
 <!-- Temporarily and poorly handle "Add" and "Remove" buttons when there is more than one toggleContainer
 TODO: Separate the Logic from the Display
@@ -97,6 +97,12 @@ TODO: Separate the Logic from the Display
 				<td class="tg-031e"><p><obs conceptId="CIEL:5219" style="checkbox" answerConceptId="CIEL:143264" /></p></td>
 
 			</tr>
+			<tr>
+				<td class="tg-031e"><p><obs conceptId="CIEL:5219" style="checkbox" answerConceptId="CIEL:142412" /></p></td>
+				<td class="tg-031e"><p><obs conceptId="CIEL:5219" style="checkbox" answerConceptId="CIEL:512" /></p></td>
+
+			</tr>
+
 			<tr>
 				<td class="tg-031e"><p><obs conceptId="CIEL:5219" style="checkbox" answerConceptId="CIEL:122983" /></p></td>
 				<td class="tg-031e"><p><obs conceptId="CIEL:5219" style="checkbox" answerConceptId="CIEL:151" /></p></td>
