LFHCDESK-17: Lines and tubes - Add "Date remove"

--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.4.1">
+<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.4.2">
 
 
 <div class="hidden" id="who-when-where">
@@ -50,6 +50,9 @@
 			<p>
 				<obs conceptId="LFHC:1065" labelText="Site: "/>
 			</p>
+			<p>
+				<obs conceptId="LFHC:1178" labelText="Date removed: "/>
+			</p>
 		</obsgroup>
 	</fieldset>
 	<fieldset field-separator=", ">
@@ -64,6 +67,9 @@
 			</p>
 			<p>
 				<obs conceptId="LFHC:1068" labelText="Site: "/>
+			</p>
+			<p>
+				<obs conceptId="LFHC:1178" labelText="Date removed: "/>
 			</p>
 
 		</obsgroup>
@@ -80,6 +86,9 @@
 			</p>
 			<p>
 				<obs conceptId="LFHC:1071" labelText="Site: "/>
+			</p>
+			<p>
+				<obs conceptId="LFHC:1178" labelText="Date removed: "/>
 			</p>
 		</obsgroup>
 	</fieldset>
