LFHCDESK-22: OPD nurse form

--- a/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
@@ -143,22 +143,7 @@ TODO: Separate the Logic from the Display
 		</p>
 
 		<p>
-			<repeat>
-				<template>
-					<div id="{n}-toggleContainer" style="display:none;">
-						<p>
-							<obs conceptId="CIEL:5219" labelText="Other: (autocomplete field)"  answerClasses="Diagnosis" style="autocomplete" />
-							<i id="{n}-addEntry" class="addEntry icon-">&#xf055; Add</i>
-							<i id="{n}-removeEntry" class="removeEntry icon-">   &#xf056; Remove</i>
-						</p>
-
-					</div>
-				</template>
-				<render n="301"/>
-				<render n="302"/>
-				<render n="303"/>
-				<render n="304"/>
-			</repeat>
+			<obs conceptId="159395" rows="6" cols="60" labelTesxt="Clinical Details: " labelNameTag="default"/>
 		</p>
 
 
