--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.4.2">
+<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.4.3">
 
 
 
@@ -359,7 +359,7 @@
 			</legend>
 			<h3>Oxygen delivery rate</h3>
 			<p>
-				<obs conceptId="LFHC:1158"/>
+				<obs conceptId="LFHC:1158" showUnits="true"/>
 			</p>
 		</fieldset>
 		<fieldset>
