LFHCDESK-9: Growth chart - change names in dropdown box

--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.4.2">
+<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.4.4">
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
@@ -321,7 +321,7 @@
 			Growth chart
 		</h3>
 		<p>
-			<obs conceptId="CIEL:1854"/>
+			<obs conceptId="CIEL:1854" answerConceptIds="CIEL:1115, CIEL:134723, CIEL:134722, CIEL:126598, CIEL:114413, CIEL:1067" answerLabels="Normal, Malnutrition of moderate degree (Z-score: -1), Malnutrition of moderate degree (Z-score: -2), Malnutrition of moderate degree (Z-score: -3), Overweight, Unknown" />
 		</p>
 	</fieldset>
 </section>
