LFHCDESK-12: Treatment - diet  - order to be changed

--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.4.4">
+<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.4.5">
 
 
 
@@ -281,7 +281,7 @@
 
 		What diet should the patient be eating?
 		<p>
-			<obs id="diet" conceptId="LFHC:1047">
+			<obs id="diet" conceptId="LFHC:1047" answerConceptIds="CIEL:159596, LFHC:1046, CIEL:985, CIEL:161648, CIEL:162758, CIEL:162709, CIEL:159597, CIEL:122884" >
 				<controls>
 					<when value="CIEL:985" thenDisplay="#feeding-plan">
 					</when>
